bynkc/tests/fixtures/positive/04_refined_int_inrange/input.bynk
commons demo {
  type Percent = Int where InRange(0, 100)
}
