bynkc/tests/fixtures/negative/02_inverted_range/input.bynk
commons demo {
  type Bad = Int where InRange(10, 5)
}
